--- a/openocd.cfg
+++ b/openocd.cfg
@@ -7,4 +7,6 @@ source [find target/stm32f4x.cfg]
 # Enable SWO at 2 MHz
 stm32f4x.tpiu configure -protocol uart -traceclk 168000000 -pin-freq 2000000
 stm32f4x.tpiu enable
-itm ports on
+
+# Enable ITM port 0
+itm port 0 on
