--- a/openocd.cfg
+++ b/openocd.cfg
@@ -6,7 +6,9 @@ source [find target/stm32f4x.cfg]
 
 # Enable SWO at 2 MHz
 stm32f4x.tpiu configure -protocol uart -traceclk 168000000 -pin-freq 2000000
+stm32f4x.tpiu configure -output ocd.log
 stm32f4x.tpiu enable
 
 # Enable ITM port 0
 itm port 0 on
+itm decode on
