--- a/openocd.cfg
+++ b/openocd.cfg
@@ -5,9 +5,9 @@ source [find target/stm32f4x.cfg]
 # transport select hla_swd
 
 # Enable SWO at 2 MHz
-stm32f4x.tpiu configure -protocol uart -traceclk 168000000 -pin-freq 2000000
-stm32f4x.tpiu configure -output ocd.log
-stm32f4x.tpiu enable
+#stm32f4x.tpiu configure -protocol uart -traceclk 168000000 -pin-freq 2000000
+#stm32f4x.tpiu configure -output ocd.log
+#stm32f4x.tpiu enable
 
 # Enable ITM port 0
-itm port 0 on
+#itm port 0 on
